# hop

./: .env  .gitignore  Cargo.toml  README.md  prettybytes.py
migrations/: 20250102180359_create_user_table.sql
src/: lib.rs
src/client/: config.rs  handle_request.rs  handle_terminal.rs  handle_terminal_event.rs  mod.rs  reads.rs  screen.rs  serverconn.rs  startuptasks.rs
src/db/: connect.rs  mod.rs  user.rs
src/server/: handle_connection.rs  handle_request.rs  mod.rs  userconn.rs
src/server/handlers/: login.rs
src/transport/: conn.rs  mod.rs  request.rs
