[package]
name = "hop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
ratatui = "0.29.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_bytes = "0.11.15"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "sqlite", "derive", "macros" ] }
tokio = { version = "1.42.0", features = ["full"] }
